--- a/.gitignore
+++ b/.gitignore
@@ -183,5 +183,5 @@ cython_debug/
 # Poetry local configuration file - https://python-poetry.org/docs/configuration/#local-configuration
 poetry.toml
 
-
+some_json.json
 # End of https://www.toptal.com/developers/gitignore/api/python,linux
